# GLAMUP2.0

./: .gitignore  package-lock.json  package.json
apps/mobile/: app.json  nitro.json  package.json  withMediaPipe.js
apps/mobile/modules/mediapipescanner/: .gitignore  package.json  react-native.config.js
apps/mobile/modules/mediapipescanner/android/: CMakeLists.txt  build.gradle
apps/mobile/modules/mediapipescanner/android/src/main/: AndroidManifest.xml
apps/mobile/modules/mediapipescanner/android/src/main/cpp/: CMakePlaceholder.cpp  MediaPipeScannerOnLoad.cpp
apps/mobile/modules/mediapipescanner/android/src/main/java/com/margelo/nitro/com/anonymous/mediapipescanner/: MediaPipeScanner.kt  MediaPipeScannerPackage.kt
apps/mobile/modules/mediapipescanner/src/: MediaPipeScanner.nitro.ts  index.ts
apps/mobile/modules/my-module/: expo-module.config.json
apps/mobile/modules/my-module/android/: build.gradle
apps/mobile/modules/my-module/src/: MediapipescannerModule.ts  MediapipescannerModule.web.ts
apps/mobile/src/app/: _layout.tsx  camera.tsx
apps/mobile/src/app/(tabs)/: index.tsx  profile.tsx  routine.tsx
apps/mobile/src/components/: app-tabs.tsx  app-tabs.web.tsx
apps/mobile/src/components/layout/: Header.tsx
apps/mobile/src/hooks/: use-color-scheme.ts  use-color-scheme.web.ts
apps/mobile/src/store/: themeStore.ts
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.js  page.js
apps/web/src/app/routine/: page.js
apps/web/src/components/: ThemeProvider.jsx
patches/: @mediapipe+tasks-vision+0.10.35.patch
(+13 files in other folders)
